<resources>
    <string name="app_name">Wonders Of The World</string>
    <string name="Text">The Great Wall of China is an ancient wall in China.The wall is made of cement, rocks, bricks, and powdered dirt. It was finished in 1878 and it was meant to protect the north of the empire of China from enemy attacks. It is the longest structure humans have ever built. It is about 21,196 kilometres (13,171 miles) long, 9.1 metres (30 feet) wide and 15 metres (50 feet) high. The earlier sections on the wall are made of compacted dirt and stone. Later in the Ming Dynasty they used bricks.
        There are 7,000 watch towers, block houses for soldiers and beacons to send smoke signals.</string>
    <string name="Text2">The First Emperor of China, Qin Shi Huang, started the Qin Dynasty. The Xiongnu tribes in the north of China were his enemies. The land in some parts of China is easy to cross, so Qin Shi Huang started building the Great Wall to make it more difficult for the Xiongnu to invade China.
        Other dynasties in China had worked more on the wall and made it longer. The Han, Sui, Northern and Jin Dynasties all repaired, rebuilt or expanded the Great Wall. During the Ming Dynasty, major rebuilding work took place. Sections of the wall were built with bricks and stone instead of earth.</string>
    <string name="petra1">Petra is an ancient city that lies in present-day Jordan and dates back to the fourth century B.C. Ruins of the once-great metropolis and trading center now serve as an important archeologic site and tourist attraction.</string>
    <string name="petra2">The site is considered significant by historians and archeologists alike because of its beautiful rock-cut architecture and innovative water management system, the latter of which made the region inhabitable, given that it is surrounded by desert and rugged, mountainous terrain.</string>
    <string name="petra3">The city of Petra was established as a trading post by the Nabateans, an Arab Bedouin tribe indigenous to the region in what is now southwestern Jordan.</string>
    <string name="petra4">The Nabateans living and trading in Petra soon accumulated a significant amount of wealth, and an envious Greek Empire attacked the city in 312 B.C. This event marks the first reference to Petra in recorded history.\nThe Nabateans successfully fought back the Greek invaders by taking advantage of the mountainous terrain surrounding the city. The mountains effectively served as a natural wall, buttressing Petra.</string>
    <string name="petra5">As desert dwellers, the Nabateans had long struggled during seasons in which rainfall in the region was limited. When the tribe built Petra, though, they developed a unique system of conduits, dams and cisterns to harvest, store and distribute rainwater for year-round use.</string>
    <string name="petra6">At certain times of year, the area around the city was prone to flooding. However, the Nabateans were able to effectively control these floods using dams and, therefore, the city’s water supply.\n
        This meant that they could reside in the city even during periods of drought.It also improved the crop yields of Nabatean farmers.</string>
    <string name="petra7">After the eighth century, when Petra was largely abandoned as a trading center, its stone structures were used for shelter by nomadic shepherds for several centuries.Then, in 1812, the unique ruins of Petra were “discovered” by Swiss explorer Johann Ludwig Burckhardt. He described the ruins of the once-great city in chronicles of his travels.</string>
    <string name="petra8">In the early 2000s, the site was named one of the “Seven New Wonders of the World,” leading to a spike in tourism.Since then, efforts have been made to protect the ruins of Petra from heavy tourism, as well as damage from floods, rain and other environmental factors.</string>
    <string name="petra9">
        <a href="https://en.wikipedia.org/wiki/Petra">1. https://en.wikipedia.org/wiki/Petra</a>
    </string>
    <string name="petra10">
        <a href="https://www.history.com/topics/ancient-middle-east/petra">2. https://www.history.com/topics/ancient-middle-east/petra</a>
    </string>
    <string name="machu1">Machu Picchu is a 15th-century Inca citadel, located in the Eastern Cordillera of southern Peru, on a 2,430-metre (7,970 ft) mountain ridge.It is located in the Cusco Region, Urubamba Province, Machu picchu District, above the Sacred Valley, which is 80 kilometres (50 mi) northwest of Cuzco. The Urubamba River flows past it, cutting through the Cordillera and creating a canyon with a tropical mountain climate.</string>
    <string name="machu2">Machu Picchu was built in the classical Inca style, with polished dry-stone walls. Its three primary structures are the Intihuatana, the Temple of the Sun, and the Room of the Three Windows. Most of the outlying buildings have been reconstructed in order to give tourists a better idea of how they originally appeared. By 1976, 30% of Machu Picchu had been restored and restoration continues.</string>
    <string name="machu3">Machu Picchu is believed (by Richard L. Burger) to be built starting 1450–1460.Construction appears to date from two great Inca rulers, Pachacutec Inca Yupanqui (1438–1471) and Túpac Inca Yupanqui (1472–1493). There is a consensus among archaeologists that Pachacutec ordered the construction of the royal estate for himself, most likely after a successful military campaign. Though Machu Picchu is considered to be a "royal" estate, surprisingly, it would not have been passed down in the line of succession.</string>
    <string name="machu4">Rather it was used for 80 years before being abandoned, seemingly because of the Spanish Conquests in other parts of the Inca Empire. It is possible that most of its inhabitants died from smallpox introduced by travelers before the Spanish conquistadors arrived in the area.</string>
    <string name="machu5">During its use as a royal estate, it is estimated that about 750 people lived there, with most serving as support staff (yanaconas, yana)who lived there permanently Though the estate belonged to Pachacutec, religious specialists and temporary specialized workers (mayocs) lived there as well, most likely for the rulers well-being and enjoyment. During the harsher season, staff dropped down to around a hundred servants and a few religious specialists focused on maintenance alone</string>
    <string name="machu6">There were also varying osteological stressors and varying chemical densities suggesting varying long-term diets characteristic of specific regions that were spaced apart.These diets are composed of varying levels of maize, potatoes, grains, legumes, and fish, but the overall most recent short-term diet for these people was composed of less fish and more corn. This suggests that several of the immigrants were from more coastal areas and moved to Machu Picchu where corn was a larger portion of food intake.</string>
    <string name="machu7">Much of the farming done at Machu Picchu was done on its hundreds of man-made terraces. These terraces were a work of considerable engineering, built to ensure good drainage and soil fertility while also protecting the mountain itself from erosion and landslides.</string>
    <string name="machu8">However, the terraces were not perfect, as studies of the land show that there were landslides that happened during the construction of Machu Picchu. Still visible are places where the terraces were shifted by landslides and then stabilized by the Inca as they continued to build around the area.</string>
    <string name="machu9">
        <a href="https://en.wikipedia.org/wiki/Machu_Picchu">1. https://en.wikipedia.org/wiki/Machu_Picchu</a>
    </string>
    <string name="machu10">
        <a href="https://www.history.com/topics/south-america/machu-picchu">2. https://www.history.com/topics/south-america/machu-picchu </a>
    </string>
    <string name="redeemer1">Christ the Redeemer is a monumental statue located in Rio de Janeiro, Brazil. It is the symbol of the city and, beyond that, of the whole Brazil. It is also a symbol of Christianity among the most important of the World. Christ the Redeemer is also an important tourist destination, with 600,000 visitors a year.</string>
    <string name="redeemer2">It was first imagined in 1850 by a Catholic priest, but this project was born in 1920, when a petition of support was initiated for the construction of a Christian statue. Once the style was chosen, construction began in 1922, and took nine years to be completed. Today, Christ the Redeemer is one of the seven new wonders of the world, a title recently given to 7 world monuments to reflect the list of 7 ancient wonders. It is also the most famous monument in Brazil, and its symbole, such as the Statue of Liberty is for the United States, the Eiffel Tower for France, or the Taj Mahal for India.</string>
    <string name="redeemer3">The Catholic Circle of Rio made a second proposal for a landmark statue on the mountain in 1920. The group organized an event called Semana do Monumento Monument Week to attract donations and collect signatures to support the building of the statue.The organization was motivated by what they perceived as Godlessness in the society. The donations came mostly from Brazilian Catholics.</string>
    <string name="redeemer4">In October 2006, on the 75th anniversary of the statues completion, Archbishop of Rio, Cardinal Eusebio Oscar Scheid, consecrated a chapel, named after Brazils patron saint—Our Lady of the Apparition, under the statue, allowing Catholics to hold baptisms and weddings there.</string>
    <string name="redeemer5">In 1990, several organizations, including the Archdiocese of Rio de Janeiro, media company Grupo Globo, oil company Shell do Brasil, environmental regulator IBAMA, National Institute of Historic and Artistic Heritage, and the city government of Rio de Janeiro entered an agreement to conduct restoration work.</string>
    <string name="redeemer6">More work on the statue and its environs was conducted in 2003 and early 2010. In 2003, a set of escalators, walkways, and elevators were installed to facilitate access to the platform surrounding the statue. The four-month restoration in 2010 focused on the statue itself. The statues internal structure was renovated and its soapstone mosaic covering was restored by removing a crust of fungi and other microorganisms and repairing small cracks. The lightning rods located in the statues head and arms were also repaired, and new lighting fixtures were installed at the foot of the statue.</string>
    <string name="redeemer7">
        •	Christ the Redeemer in Rio Verde, Goiás, Brazil\n
        •	Christ in the Mount in Pitangui, Minas Gerais, Brazil\n
        •	Cristo del Otero in Palencia, Spain built in 1930 (21 m)\n
        •	Cristo Rey (statue, Mexico) located on the Cerro del Cubilete in Guanajuato, Mexico, inspired by Rios Christ the Redeemer (23 m)\n
        •	Cristo Rey in Tenancingo, México, México (30 m)</string>
    <string name="history">History:</string>
    <string name="restoration">Restoration:</string>
    <string name="similar_structures">Similar Structures:</string>
    <string name="redeemer8">
        <a href="https://en.wikipedia.org/wiki/Christ_the_Redeemer_(statue)">1.https://en.wikipedia.org/wiki/Christ_the_Redeemer_(statue)</a>
    </string>
    <string name="redeemer9">
    <a href="https://theculturetrip.com/south-america/brazil/articles/a-history-of-the-christ-the-redeemer-monument/">2. https://theculturetrip.com/south-america/brazil/articles/a-history-of-the-christ-the-redeemer-monument/</a>
</string>
    <string name="christ_the_redeemer">Christ the Redeemer:</string>
</resources>