<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".christ">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/christ_the_redeemer"
                android:textColor="#000000"
                android:fontFamily="@font/alike_angular"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer1"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:background="@drawable/redeemer1"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer2"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="#000000"
                android:fontFamily="@font/alike_angular"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer3"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:background="@drawable/redeemer2"
                android:layout_margin="10dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer4"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restoration"
                android:textColor="#000000"
                android:fontFamily="@font/alike_angular"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer5"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:background="@drawable/redeemer3"
                android:layout_margin="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer6"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similar_structures"
                android:textColor="#000000"
                android:fontFamily="@font/alike_angular"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeemer7"
                android:fontFamily="@font/asul"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="For More Information:-"
                android:textColor="#000000"
                android:fontFamily="@font/alike_angular"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/christlink1"
                android:text="@string/redeemer8"
                android:fontFamily="@font/asul"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textColor="@android:color/holo_blue_dark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/christlink2"
                android:text="@string/redeemer9"
                android:fontFamily="@font/asul"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textColor="@android:color/holo_blue_dark"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:text="Go To Location"
                android:onClick="Loc1"
                android:textStyle="bold"
                android:fontFamily="@font/alike_angular"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:textColor="@android:color/holo_green_light"
                android:drawableRight="@drawable/ic_baseline_add_location_24"
                />




        </LinearLayout>

    </ScrollView>



</RelativeLayout>