<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".machupicchu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Machu Picchu:"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu1"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/machu1"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu2"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="History:"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu3"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/machu3"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu4"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="Daily life in Machu Picchu:"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu5"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/machu4"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu6"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agriculture:"
        android:fontFamily="@font/alike_angular"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machu7"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/machu5"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/machu8"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="For More Information:-"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/machulink1"
            android:text="@string/machu9"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_blue_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/machulink2"
            android:text="@string/machu10"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_blue_dark"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1"
            android:text="Go To Location"
            android:onClick="Loc1"
            android:textStyle="bold"
            android:fontFamily="@font/alike_angular"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textColor="@android:color/holo_green_light"
            android:drawableRight="@drawable/ic_baseline_add_location_24"
            />






    </LinearLayout>

    </ScrollView>

</RelativeLayout>