<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".petra">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Petra:"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra1"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/petra1"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra2"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City of Petra:"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra3"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/petra2"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra4"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Water Harvesting:"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/petra5"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/petra3"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra6"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Petra Today:"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra7"
            android:fontFamily="@font/asul"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/petra4"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petra8"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="For More Information:-"
            android:textColor="#000000"
            android:fontFamily="@font/alike_angular"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/plink1"
            android:text="@string/petra9"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_blue_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/plink2"
            android:text="@string/petra10"
            android:fontFamily="@font/asul"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_blue_dark"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1"
            android:text="Go To Location"
            android:onClick="Loc1"
            android:textStyle="bold"
            android:fontFamily="@font/alike_angular"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textColor="@android:color/holo_green_light"
            android:drawableRight="@drawable/ic_baseline_add_location_24"
            />








    </LinearLayout>
    </ScrollView>

</RelativeLayout>